--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,13 @@ name: build
 
 on:
   push:
+    branches:
+      - main
     tags-ignore:
       - v*
+  pull_request:
+      branches:
+        - main
 
 jobs:
   build:
